crates/swc_ecma_parser/tests/test262-error-references/fail/5427bdf48f3eb6d9.js.stderr
error: Invalid unicode escape
 --> $DIR/tests/test262-parser/fail/5427bdf48f3eb6d9.js:1:3
  |
1 | ('\u{2028')
  |   ^^^^^^^

error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/5427bdf48f3eb6d9.js:1:10
  |
1 | ('\u{2028')
  |          ^^

